# Katesthe-core

./: .coveragerc  .dockerignore  .env.example  .env.local.example  .env.prod.example  .env.prof.example  .env.test.example  .gitignore  BACKPORT_PLAN.md  CHANGELOG.md  DAPHNE_TO_UVICORN_MIGRATION.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  RHITORIC_BACKPORT_PLAN.md  STANDALONE_NOTIFICATION_SYSTEM.md  conftest.py  docker-compose.yml  entrypoint.sh  env.docker.example  manage.py  profiling_config.json  pyproject.toml  pytest.ini  schema.yml  serverman.sh  setup.sh  test_file.html
.claude/: CONTEXT_MAP.md  WORKFLOW_KIT
.claude/agents/: snapshot-cartographer.md  snapshot-reviewer.md
.claude/commands/: snapshot.md
.claude/tasks/: MASTER_PLAN.md
.cursor/rules/: 00-README-universal-rules.mdc  00-django-audit-loop.mdc  00-django-docs-changelog.mdc  00-django-patterns-decision-guide.mdc  00-django-performance.mdc  00-django-reuse-awareness.mdc  00-django-security.mdc  00-django-testing-discipline.mdc  00-pydantic-schemas-pattern.mdc  01-planning-workflow.mdc  (+18 more)
accounts/: apps.py  authentication.py  emails.py  tasks.py  tokens.py  utils.py
config/: __init__.py  asgi.py  celery.py  db_router.py  db_utils.py  env.py  exception_handler.py  health.py  jwt_keys.py  logger.py  routing.py  spectacular_auth.py  spectacular_pydantic.py  urls.py  urls_dev.py  urls_test.py  wsgi.py
docs/: API_CONTRACT.md  AUTH.md  BACKEND_UTILITIES.md  README.md  db-primary-replica.md
errors/: __init__.py  apps.py  catalog.py  exceptions.py
notifications/: apps.py  tasks.py
scripts/: smoke.sh
static/: profiling_dashboard.html
utils/: api_openapi.py  api_response.py  apps.py  celery_helpers.py  consumers.py  drf_error_envelope.py  export.py  openapi_serializers.py  outbox.py  pagination.py  tasks.py  throttles.py  validators.py
(+296 files in other folders)
